compiler/tools/fpp-check/test/connection_pattern/text_event_missing_source_port.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_pattern/text_event_missing_source_port.fpp: 18.37
    text event connections instance textEvents { c }
                                    ^
error: instance textEvents has no text event input port
